--- a/tainanmemory/final.html
+++ b/tainanmemory/final.html
@@ -1504,7 +1504,6 @@ html {
 
 #container {
   width: 100%;
-  height: 100vh;
 }
 
 #header {
@@ -6414,7 +6413,7 @@ Set up your profile, stats and meters, and other relevant information here!
 &lt;li&gt;遊玩過程中請勿點擊網頁瀏覽器上一頁，避免跳出程式而影響體驗。&lt;/li&gt;
 &lt;li&gt;程式內建自動存檔功能，若因故關閉網頁，只需重新掃描遊戲QRcode，選擇「繼續體驗」。&lt;/li&gt;
 &lt;/div&gt;
-&lt;div id=&quot;start-menu&quot;&gt;&lt;&lt;button &quot;下一頁&quot; &quot;guide2&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;/div&gt;</tw-passagedata><tw-passagedata pid="19" name="guide2" tags="noreturn nofooter title white" position="850,200" size="100,100">&lt;span style =&#39;text-align: center;&#39;&gt;&lt;h1&gt;操作說明&lt;/h1&gt;&lt;/span&gt;
+&lt;span class=&quot;levelinput&quot;&gt;&lt;&lt;button &quot;下一頁&quot; &quot;guide2&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;/span&gt;</tw-passagedata><tw-passagedata pid="19" name="guide2" tags="noreturn nofooter title white" position="850,200" size="100,100">&lt;span style =&#39;text-align: center;&#39;&gt;&lt;h1&gt;操作說明&lt;/h1&gt;&lt;/span&gt;
 &lt;div style=&#39;padding: 0 8%;&#39;&gt;\
 選單中各個按鈕的功能如下&lt;br&gt;
 &lt;li&gt;重啟遊戲：清除所有進度，從頭開始體驗。&lt;/li&gt;
@@ -6422,7 +6421,7 @@ Set up your profile, stats and meters, and other relevant information here!
 &lt;li&gt;遊戲設定：設定文字字體、文字大小與開關自動存檔通知。&lt;/li&gt;
 &lt;li&gt;遊戲資訊：「城垣尋憶」遊戲的相關資訊。&lt;/li&gt;
 &lt;/div&gt;
-&lt;div id=&quot;start-menu&quot;&gt;&lt;&lt;button &quot;繼續體驗&quot; &quot;開場-1.1&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;/div&gt;
+&lt;span class=&quot;levelinput&quot;&gt;&lt;&lt;button &quot;繼續體驗&quot; &quot;開場-1.1&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;/span&gt;
 /*[[開場-1.1]]*/</tw-passagedata><tw-passagedata pid="20" name="ch0-0" tags="center nobr black autosave" position="1400,400" size="100,100">&lt;&lt;set _VNOptions to { showHistory: true }&gt;&gt;&lt;div class=&quot;title-box&quot;&gt;&lt;img src=&quot;media/img/初章.png&quot;&gt;&lt;/div&gt;
 &lt;&lt;timed 0.5s t8n&gt;&gt;
 &lt;div id=&quot;vn-character&quot;&gt;&lt;img src=&quot;media/img/南門公園.png&quot; class=&quot;storyimage&quot;&gt;&lt;span id=&quot;characterimg&quot;&gt;&lt;/span&gt;&lt;/div&gt;&lt;&lt;/timed&gt;&gt;
