--- a/tainanmemory/final.html
+++ b/tainanmemory/final.html
@@ -1502,6 +1502,17 @@ html {
   height: 100%;
 }
 
+body {
+  color: var(--text);
+  font-family: var(--fontbody);
+  background-color: var(--bg1);
+  height: 100%;
+}
+
+#story {
+  height: 100%;
+}
+
 #container {
   width: 100%;
 }
@@ -1516,12 +1527,6 @@ html {
   width: 100%;
   height: 3vh;
   text-align: center;
-}
-
-body {
-  color: var(--text);
-  font-family: var(--fontbody);
-  background-color: var(--bg1);
 }
 
 .logo {
@@ -1550,10 +1555,6 @@ body {
 
 .game-start-timed:hover {
   opacity: 0.5;
-}
-
-#story {
-  height: 100vh;
 }
 
 /* start menu */
