--- a/tainanmemory/final.html
+++ b/tainanmemory/final.html
@@ -6527,7 +6527,7 @@ Set up your profile, stats and meters, and other relevant information here!
 &lt;name&gt;火爆娘子&lt;/name&gt;&lt;img&gt;火爆娘子.png&lt;/img&gt;&lt;p&gt;其實，我本是行走江湖的俠女。&lt;/p&gt;
 &lt;name&gt;火爆娘子&lt;/name&gt;&lt;img&gt;火爆娘子.png&lt;/img&gt;&lt;p&gt;最近鄰近的菜市場出了點糾紛，&lt;br&gt;地方惡霸竟勒索攤販，&lt;br&gt;繳納十文香油錢。&lt;/p&gt;
 &lt;name&gt;火爆娘子&lt;/name&gt;&lt;img&gt;火爆娘子.png&lt;/img&gt;&lt;p&gt;我記得碑林裡，&lt;br&gt;似乎刻過關於香油錢的數目，&lt;br&gt;但我怎麼找，&lt;br&gt;都找不到那方碑文⋯⋯&lt;/p&gt;
-&lt;name&gt;城玄&lt;/name&gt;&lt;img&gt;城玄.png&lt;/img&gt;&lt;p&gt;好，我來幫忙妳找看看。&lt;/p&gt;</tw-passagedata><tw-passagedata pid="43" name="ch1關卡2" tags="center nofooter one autosave white" position="2000,1300" size="100,100">&lt;&lt;timed 0.5s t8n&gt;&gt;&lt;div class=&quot;title-box&quot; style=&quot;color: black !important;&quot;&gt;&lt;h3&gt;關卡1-2&lt;/h3&gt;&lt;/div&gt;&lt;&lt;/timed&gt;&gt;
+&lt;name&gt;城玄&lt;/name&gt;&lt;img&gt;城玄.png&lt;/img&gt;&lt;p&gt;好，我來幫忙妳找看看。&lt;/p&gt;</tw-passagedata><tw-passagedata pid="43" name="ch1關卡2" tags="center nofooter one autosave white" position="2000,1300" size="100,100">&lt;&lt;removeclass &quot;#story&quot; &quot;blackbg&quot;&gt;&gt;&lt;&lt;removeclass &quot;#story&quot; &quot;redbg&quot;&gt;&gt;&lt;&lt;removeclass &quot;#story&quot; &quot;yellowbg&quot;&gt;&gt;&lt;&lt;removeclass &quot;#story&quot; &quot;greenbg&quot;&gt;&gt;&lt;&lt;timed 0.5s t8n&gt;&gt;&lt;div class=&quot;title-box&quot; style=&quot;color: black !important;&quot;&gt;&lt;h3&gt;關卡1-2&lt;/h3&gt;&lt;/div&gt;&lt;&lt;/timed&gt;&gt;
 &lt;&lt;timed 1s t8n&gt;&gt;請在【大碑林】中，尋找刻有「萬＿同＿所」字樣的石碑。
 
 城玄回想起的字句是：&lt;&lt;textbox &#39;_answer&#39; &#39;&#39; autofocus&gt;&gt;
@@ -6555,7 +6555,7 @@ Set up your profile, stats and meters, and other relevant information here!
 &lt;&lt;timed 0.5s t8n&gt;&gt;&lt;div class=&quot;title-box&quot;&gt;&lt;img src=&quot;media/img/第一章.png&quot;&gt;&lt;/div&gt;&lt;&lt;/timed&gt;&gt;
 &lt;div id=&quot;vn-character&quot;&gt;&lt;span id=&quot;characterimg&quot;&gt;&lt;/span&gt;&lt;/div&gt;
 &lt;&lt;timed 1s t8n&gt;&gt;&lt;&lt;VNText &quot;dialoguePages6&quot; _VNOptions &quot;ch1關卡2&quot;&gt;&gt;&lt;&lt;/timed&gt;&gt;
-/*[[ch1關卡2]]*/</tw-passagedata><tw-passagedata pid="49" name="OSPages3" tags="" position="1500,1200" size="100,100">&lt;OS&gt;頭痛如同浪潮般退卻，&lt;br&gt;心口卻留下一股莫名的悸動。&lt;/OS&gt;</tw-passagedata><tw-passagedata pid="50" name="ch2關卡1" tags="center nofooter one autosave white" position="2000,2100" size="100,100">&lt;&lt;timed 0.5s t8n&gt;&gt;&lt;div class=&quot;title-box&quot; style=&quot;color: black !important;&quot;&gt;&lt;h3&gt;關卡2-1&lt;/h3&gt;&lt;/div&gt;&lt;&lt;/timed&gt;&gt;
+/*[[ch1關卡2]]*/</tw-passagedata><tw-passagedata pid="49" name="OSPages3" tags="" position="1500,1200" size="100,100">&lt;OS&gt;頭痛如同浪潮般退卻，&lt;br&gt;心口卻留下一股莫名的悸動。&lt;/OS&gt;</tw-passagedata><tw-passagedata pid="50" name="ch2關卡1" tags="center nofooter one autosave white" position="2000,2100" size="100,100">&lt;&lt;removeclass &quot;#story&quot; &quot;blackbg&quot;&gt;&gt;&lt;&lt;removeclass &quot;#story&quot; &quot;redbg&quot;&gt;&gt;&lt;&lt;removeclass &quot;#story&quot; &quot;yellowbg&quot;&gt;&gt;&lt;&lt;removeclass &quot;#story&quot; &quot;greenbg&quot;&gt;&gt;&lt;&lt;timed 0.5s t8n&gt;&gt;&lt;div class=&quot;title-box&quot; style=&quot;color: black !important;&quot;&gt;&lt;h3&gt;關卡2-1&lt;/h3&gt;&lt;/div&gt;&lt;&lt;/timed&gt;&gt;
 
 &lt;&lt;timed 1s t8n&gt;&gt;請參閱【遊戲配件一：五行八卦圖】，將其與【大南門城圖】進行套疊。根據阿香姊提供的文字提示，找出 A、B、C 三者交會的位置。
 &lt;img src=&quot;media/img/城牆圖.png&quot; width=&quot;100%&quot;&gt;
@@ -6584,7 +6584,7 @@ Set up your profile, stats and meters, and other relevant information here!
 &lt;&lt;timed 0.5s t8n&gt;&gt;&lt;div class=&quot;title-box&quot;&gt;&lt;img src=&quot;media/img/第一章.png&quot;&gt;&lt;/div&gt;&lt;&lt;/timed&gt;&gt;
 &lt;div id=&quot;vn-character&quot;&gt;&lt;span id=&quot;characterimg&quot;&gt;&lt;/span&gt;&lt;/div&gt;
 &lt;&lt;timed 1s t8n&gt;&gt;&lt;&lt;VNText &quot;dialoguePages7&quot; _VNOptions &quot;ch2-4&quot;&gt;&gt;&lt;&lt;/timed&gt;&gt;
-/*[[ch2-4]]*/</tw-passagedata><tw-passagedata pid="55" name="ch2關卡2" tags="center nofooter one autosave white" position="2125,2100" size="100,100">&lt;&lt;timed 0.5s t8n&gt;&gt;&lt;div class=&quot;title-box&quot; style=&quot;color: black !important;&quot;&gt;&lt;h3&gt;關卡2-2&lt;/h3&gt;&lt;/div&gt;&lt;&lt;/timed&gt;&gt;
+/*[[ch2-4]]*/</tw-passagedata><tw-passagedata pid="55" name="ch2關卡2" tags="center nofooter one autosave white" position="2125,2100" size="100,100">&lt;&lt;removeclass &quot;#story&quot; &quot;blackbg&quot;&gt;&gt;&lt;&lt;removeclass &quot;#story&quot; &quot;redbg&quot;&gt;&gt;&lt;&lt;removeclass &quot;#story&quot; &quot;yellowbg&quot;&gt;&gt;&lt;&lt;removeclass &quot;#story&quot; &quot;greenbg&quot;&gt;&gt;&lt;&lt;timed 0.5s t8n&gt;&gt;&lt;div class=&quot;title-box&quot; style=&quot;color: black !important;&quot;&gt;&lt;h3&gt;關卡2-2&lt;/h3&gt;&lt;/div&gt;&lt;&lt;/timed&gt;&gt;
 &lt;&lt;timed 1s t8n&gt;&gt;你在【寧南門】找到放有食譜的寶箱。
 請參考【遊戲配件二：城牆圖】，找出三個方位所對應的數字。
 
@@ -6598,7 +6598,7 @@ Set up your profile, stats and meters, and other relevant information here!
   &lt;img src=&quot;media/img/win.png&quot; width=&quot;90%&quot; class=&quot;scale-in-center&quot;&gt;
 &lt;/span&gt;
 &lt;&lt;timed 1s t8n&gt;&gt;&lt;&lt;link [img[media/img/繼續.png][ch3-2]]&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;&lt;/timed&gt;&gt;
-/* [[ch3-2]] */</tw-passagedata><tw-passagedata pid="58" name="ch2關卡2提示" tags="" position="300,1000" size="100,100">弌是弍的少一筆，代表一，所以答案是一兩。</tw-passagedata><tw-passagedata pid="59" name="ch2關卡3" tags="center nofooter one autosave white" position="2000,2600" size="100,100">&lt;&lt;set _options = [&quot;請選擇&quot;,&quot;府城建城牆&quot;, &quot;府城拆城牆&quot;, &quot;重建府城門&quot;]&gt;&gt;&lt;&lt;timed 0.5s t8n&gt;&gt;&lt;div class=&quot;title-box&quot; style=&quot;color: black !important;&quot;&gt;&lt;h3&gt;關卡2-3&lt;/h3&gt;&lt;/div&gt;&lt;&lt;/timed&gt;&gt;
+/* [[ch3-2]] */</tw-passagedata><tw-passagedata pid="58" name="ch2關卡2提示" tags="" position="300,1000" size="100,100">弌是弍的少一筆，代表一，所以答案是一兩。</tw-passagedata><tw-passagedata pid="59" name="ch2關卡3" tags="center nofooter one autosave white" position="2000,2600" size="100,100">&lt;&lt;removeclass &quot;#story&quot; &quot;blackbg&quot;&gt;&gt;&lt;&lt;removeclass &quot;#story&quot; &quot;redbg&quot;&gt;&gt;&lt;&lt;removeclass &quot;#story&quot; &quot;yellowbg&quot;&gt;&gt;&lt;&lt;removeclass &quot;#story&quot; &quot;greenbg&quot;&gt;&gt;&lt;&lt;set _options = [&quot;請選擇&quot;,&quot;府城建城牆&quot;, &quot;府城拆城牆&quot;, &quot;重建府城門&quot;]&gt;&gt;&lt;&lt;timed 0.5s t8n&gt;&gt;&lt;div class=&quot;title-box&quot; style=&quot;color: black !important;&quot;&gt;&lt;h3&gt;關卡2-3&lt;/h3&gt;&lt;/div&gt;&lt;&lt;/timed&gt;&gt;
 &lt;&lt;timed 1s t8n&gt;&gt;你來到【南門城牆】，請找出照片中的對應場景，並解讀其中隱藏的【17．2．5】三個數字之意涵。
 &lt;img src=&quot;media/img/說明牌.png&quot; width=&quot;100%&quot;&gt;
 
@@ -6660,7 +6660,7 @@ Set up your profile, stats and meters, and other relevant information here!
 &lt;div class=&quot;title-box&quot;&gt;&lt;img src=&quot;media/img/第二章.png&quot;&gt;&lt;/div&gt;
 &lt;div id=&quot;vn-character&quot;&gt;&lt;span id=&quot;characterimg&quot;&gt;&lt;/span&gt;&lt;/div&gt;
 &lt;&lt;timed 0.5s t8n&gt;&gt;&lt;&lt;VNText &quot;dialoguePages11&quot; _VNOptions &quot;ch3-4&quot;&gt;&gt;&lt;&lt;/timed&gt;&gt;
-/*[[ch3-4]]*/</tw-passagedata><tw-passagedata pid="70" name="ch3關卡1" tags="center nofooter one autosave white" position="2000,3000" size="100,100">&lt;&lt;timed 0.5s t8n&gt;&gt;&lt;div class=&quot;title-box&quot; style=&quot;color: black !important;&quot;&gt;&lt;h3&gt;關卡3-1&lt;/h3&gt;&lt;/div&gt;&lt;&lt;/timed&gt;&gt;
+/*[[ch3-4]]*/</tw-passagedata><tw-passagedata pid="70" name="ch3關卡1" tags="center nofooter one autosave white" position="2000,3000" size="100,100">&lt;&lt;removeclass &quot;#story&quot; &quot;blackbg&quot;&gt;&gt;&lt;&lt;removeclass &quot;#story&quot; &quot;redbg&quot;&gt;&gt;&lt;&lt;removeclass &quot;#story&quot; &quot;yellowbg&quot;&gt;&gt;&lt;&lt;removeclass &quot;#story&quot; &quot;greenbg&quot;&gt;&gt;&lt;&lt;timed 0.5s t8n&gt;&gt;&lt;div class=&quot;title-box&quot; style=&quot;color: black !important;&quot;&gt;&lt;h3&gt;關卡3-1&lt;/h3&gt;&lt;/div&gt;&lt;&lt;/timed&gt;&gt;
 
 &lt;&lt;timed 1s t8n&gt;&gt;運用貓醬的變身能力化為骰子，挑戰香腸伯的骰子遊戲。
 變動發光的骰子，讓自己的點數贏過香腸伯！
@@ -6689,7 +6689,7 @@ Set up your profile, stats and meters, and other relevant information here!
 &lt;&lt;timed 0.5s t8n&gt;&gt;&lt;div class=&quot;title-box&quot;&gt;&lt;img src=&quot;media/img/第三章.png&quot;&gt;&lt;/div&gt;&lt;&lt;/timed&gt;&gt;
 &lt;div id=&quot;vn-character&quot;&gt;&lt;span id=&quot;characterimg&quot;&gt;&lt;/span&gt;&lt;/div&gt;
 &lt;&lt;timed 1s t8n&gt;&gt;&lt;&lt;VNText &quot;dialoguePages13&quot; _VNOptions &quot;ch3關卡1&quot;&gt;&gt;&lt;&lt;/timed&gt;&gt;
-/*[[ch3關卡1]]*/</tw-passagedata><tw-passagedata pid="78" name="ch3關卡2-1" tags="center nofooter one autosave white" position="2000,3400" size="100,100">&lt;&lt;timed 0.5s t8n&gt;&gt;&lt;div class=&quot;title-box&quot; style=&quot;color: black !important;&quot;&gt;&lt;h3&gt;關卡3-2-1&lt;/h3&gt;&lt;/div&gt;&lt;&lt;/timed&gt;&gt;
+/*[[ch3關卡1]]*/</tw-passagedata><tw-passagedata pid="78" name="ch3關卡2-1" tags="center nofooter one autosave white" position="2000,3400" size="100,100">&lt;&lt;removeclass &quot;#story&quot; &quot;blackbg&quot;&gt;&gt;&lt;&lt;removeclass &quot;#story&quot; &quot;redbg&quot;&gt;&gt;&lt;&lt;removeclass &quot;#story&quot; &quot;yellowbg&quot;&gt;&gt;&lt;&lt;removeclass &quot;#story&quot; &quot;greenbg&quot;&gt;&gt;&lt;&lt;timed 0.5s t8n&gt;&gt;&lt;div class=&quot;title-box&quot; style=&quot;color: black !important;&quot;&gt;&lt;h3&gt;關卡3-2-1&lt;/h3&gt;&lt;/div&gt;&lt;&lt;/timed&gt;&gt;
 &lt;&lt;timed 1s t8n&gt;&gt;解讀阿香姊的食譜殘頁。
 目前已知下方殘頁所代表的字，請前往【小南城隍廟】尋找線索，推測出「上方殘頁」所代表的字，並依序（由左至右）填入答案。
 
