更新關卡介面邊框

--- a/tainanmemory/game.html
+++ b/tainanmemory/game.html
@@ -277,8 +277,8 @@ body.black #nav a:hover {
 body.white {
   background-color: rgb(150 120 45 / 70%);
   border-image-source: url(media/img/levelbg.svg);
-  border-image-slice: 70 0 0 0 fill;
-  border-image-width: 5% 0 95% 0;
+  border-image-slice: 33% 0 0 0 fill;
+  border-image-width: 5% 0;
   border-image-repeat: stretch;
   border-image-outset: 2px;
 }
@@ -2836,7 +2836,7 @@ html.indicator .flirt-choice-item a::after {
 
   /* white標籤版面 */
   body.white {
-    border-image-width: 40px 0px 0 0;
+    border-image-width: 40px 0;
   }
 
   /* <<VNtext>> */
