--- a/tainancitywall/demov2.html
+++ b/tainancitywall/demov2.html
@@ -5698,7 +5698,7 @@ Set up your profile, stats and meters, and other relevant information here!
 探索府城隍廟的歷史與傳說
 破解關卡，尋找隱藏線索
 審判罪惡，決定公平裁決&lt;/div&gt;
-[[立即體驗|https://tina458615.github.io/tainanmemory/game.html?openExternalBrowser=1]]
+[[立即體驗|https://tina458615.github.io/twcitygod/game.html]]
 
 &lt;&lt;link [img[media/img/提示返回.png]]&gt;&gt;&lt;&lt;run slideWin(&quot;hide&quot;)&gt;&gt;&lt;&lt;/link&gt;&gt;</tw-passagedata><tw-passagedata pid="90" name="府城隍廟的石獅" tags="" position="2250,700" size="100,100">&lt;div style=&#39;padding: 0 5%; color: #eee;&#39;&gt;&lt;h3&gt;府城隍廟的石獅&lt;/h3&gt;
 &lt;div style=&#39;text-align: left;&#39;&gt;從清代蔣元樞《重修台郡各建築圖說》（1778－1781）中可見，昔日臺灣府城隍廟門前立有石鼓，象徵莊嚴與守護。
