--- a/tainancitywall/demov2.html
+++ b/tainancitywall/demov2.html
@@ -5347,7 +5347,7 @@ Set up your profile, stats and meters, and other relevant information here!
 &lt;img src=&quot;media/img/石獅.png&quot; width=&#39;80%&#39;&gt;
 
 石獅出生的干支紀年為：
-&lt;span class=&quot;level1input&quot;&gt;昭和&lt;&lt;textbox &#39;_answer&#39; &#39;&#39; autofocus&gt;&gt;&lt;/span&gt;
+&lt;span class=&quot;level1input&quot;&gt;昭和&lt;&lt;textbox &#39;_answer&#39; &#39;&#39;&gt;&gt;&lt;/span&gt;
 
 &lt;&lt;button &#39;輸入&#39;&gt;&gt;
 	&lt;&lt;set $answer to _answer.trim()&gt;&gt;
@@ -5395,8 +5395,8 @@ Set up your profile, stats and meters, and other relevant information here!
 莫非龍神卡就藏在此處？&lt;/p&gt;</tw-passagedata><tw-passagedata pid="38" name="ch1關卡3" tags="center nofooter one autosave white" position="2150,1300" size="100,100">&lt;&lt;timed 0.5s t8n&gt;&gt;&lt;div class=&quot;title-box&quot; style=&quot;color: black !important;&quot;&gt;&lt;h3&gt;關卡1-3&lt;/h3&gt;&lt;/div&gt;&lt;&lt;/timed&gt;&gt;
 &lt;&lt;timed 1s t8n&gt;&gt;從拼合而成的圖案中，得到解開石獅的答案。
 &lt;img src=&quot;media/img/石盤.png&quot; width=&#39;100%&#39;&gt;
-甲乙：&lt;&lt;textbox &#39;_answer1&#39; &#39;&#39; autofocus&gt;&gt;
-丙丁：&lt;&lt;textbox &#39;_answer2&#39; &#39;&#39; autofocus&gt;&gt;
+甲乙：&lt;&lt;textbox &#39;_answer1&#39; &#39;&#39;&gt;&gt;
+丙丁：&lt;&lt;textbox &#39;_answer2&#39; &#39;&#39;&gt;&gt;
 
 &lt;&lt;button &#39;輸入&#39;&gt;&gt;
 	&lt;&lt;set $answer = []&gt;&gt;
@@ -5633,7 +5633,7 @@ Set up your profile, stats and meters, and other relevant information here!
 對照永華宮平面圖找出門柱，寫在平面圖門柱上的數字代表實際門柱對聯上的第幾個字，計算該字的筆劃，就能推導出寶箱鎖上的密碼數字。
 &lt;img src=&quot;media/img/寶箱位置.png&quot; width=&#39;100%&#39;&gt;
 
-寶箱密碼：&lt;&lt;textbox &#39;_answer&#39; &#39;&#39; autofocus&gt;&gt;
+寶箱密碼：&lt;&lt;textbox &#39;_answer&#39; &#39;&#39;&gt;&gt;
 
 &lt;&lt;button &#39;輸入&#39;&gt;&gt;
 	&lt;&lt;set $answer to _answer&gt;&gt;
