--- a/tainancitywall/demov2.html
+++ b/tainancitywall/demov2.html
@@ -409,7 +409,7 @@ body.end {
   font-family: "Yuji Syuku";
   font-size: 1.5em;
   color: #ff0;
-  border: 1px solid #ff0;
+  /* border: 1px solid #ff0; */
   border-radius: 3em;
 }
 
@@ -591,7 +591,7 @@ body.end {
   justify-content: space-between;
 }
 #offering span {
-  width: 45%;
+  width: 40%;
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
