--- a/tainancitywall/demov2.html
+++ b/tainancitywall/demov2.html
@@ -5564,7 +5564,7 @@ Set up your profile, stats and meters, and other relevant information here!
 /*[[結束]]*/</tw-passagedata><tw-passagedata pid="67" name="dialoguePages14" tags="" position="1650,3425" size="100,100">&lt;name&gt;韓律之&lt;/name&gt;&lt;scene&gt;永華宮.png&lt;/scene&gt;&lt;img&gt;韓律之.png&lt;/img&gt;&lt;p&gt;太好了！&lt;/p&gt;
 &lt;name&gt;&lt;/name&gt;&lt;img&gt;default_dialogue.png&lt;/img&gt;&lt;p&gt;任務總算完美達成，我和响悅激動地擁抱在一起。&lt;/p&gt;
 &lt;name&gt;&lt;/name&gt;&lt;img&gt;default_dialogue.png&lt;/img&gt;&lt;p&gt;然而，突然出現的黑蝴蝶夫人卻氣得牙癢癢，不斷跺著腳。&lt;br&gt;高跟鞋在宮殿石板上敲出清脆的迴響。&lt;/p&gt;
-&lt;name&gt;黑蝴蝶夫人&lt;/name&gt;&lt;img&gt;default_dialogue.png&lt;/img&gt;&lt;p&gt;可惡！太可惡了！&lt;br&gt;原本龍神之力、龍神卡要成為我的收藏品，&lt;br&gt;我竟然輸給這小毛頭！&lt;/p&gt;
+&lt;name&gt;黑蝴蝶夫人&lt;/name&gt;&lt;img&gt;黑蝴蝶夫人.png&lt;/img&gt;&lt;p&gt;可惡！太可惡了！&lt;br&gt;原本龍神之力、龍神卡要成為我的收藏品，&lt;br&gt;我竟然輸給這小毛頭！&lt;/p&gt;
 &lt;name&gt;黑蝴蝶夫人&lt;/name&gt;&lt;img&gt;default_dialogue.png&lt;/img&gt;&lt;p&gt;哼，別太得意，&lt;br&gt;下次我會帶來更新、更難的謎題，把你們考到絕望！&lt;/p&gt;
 &lt;name&gt;&lt;/name&gt;&lt;img&gt;default_dialogue.png&lt;/img&gt;&lt;p&gt;話音落下，無數黑蝴蝶再次升起，如黑霧般將她的身影吞沒。&lt;/p&gt;
 &lt;name&gt;&lt;/name&gt;&lt;img&gt;default_dialogue.png&lt;/img&gt;&lt;p&gt;等蝴蝶散去，她已經消失無蹤。&lt;/p&gt;
