--- a/tainancitywall/game.html
+++ b/tainancitywall/game.html
@@ -5488,7 +5488,7 @@ if (typeof gtag === &quot;function&quot;) {
 &lt;name&gt;韓律之&lt;/name&gt;&lt;img&gt;韓律之.png&lt;/img&gt;&lt;p&gt;只能走下去看看。&lt;/p&gt;
 &lt;name&gt;&lt;/name&gt;&lt;img&gt;default_dialogue.png&lt;/img&gt;&lt;p&gt;我們沿著狹窄的石階緩緩前行，濕氣越來越重。&lt;br&gt;不久後，一間小小的石室出現在眼前。&lt;/p&gt;
 &lt;name&gt;&lt;/name&gt;&lt;img&gt;default_dialogue.png&lt;/img&gt;&lt;p&gt;牆邊流淌著清澈的溪水聲，&lt;br&gt;伴隨著微涼的風，我才意識到，&lt;br&gt;這裡，應該就在清水寺的正下方。&lt;/p&gt;
-&lt;name&gt;&lt;/name&gt;&lt;img&gt;default_dialogue.png&lt;/img&gt;&lt;p&gt;那股水聲，正是舫溪。&lt;br&gt;昏黃的燭光在牆面閃爍，映出三個整齊擺放的供品盤。&lt;br&gt;供品盤上寫著「分寸得宜，家境平安」。&lt;/p&gt;
+&lt;name&gt;&lt;/name&gt;&lt;img&gt;default_dialogue.png&lt;/img&gt;&lt;p&gt;那股水聲，正是枋溪。&lt;br&gt;昏黃的燭光在牆面閃爍，映出三個整齊擺放的供品盤。&lt;br&gt;供品盤上寫著「分寸得宜，家境平安」。&lt;/p&gt;
 &lt;name&gt;&lt;/name&gt;&lt;img&gt;default_dialogue.png&lt;/img&gt;&lt;p&gt;供品盤周圍散落著數個物品，在它們後方，牆上貼著一張古舊的符紙。&lt;br&gt;紙面似乎隱隱泛著淡光。&lt;/p&gt;
 &lt;name&gt;响悅&lt;/name&gt;&lt;img&gt;响悅.png&lt;/img&gt;&lt;p&gt;看來要從周圍散落的物品中，找出正確的祭品放到供盤上⋯⋯&lt;br&gt;只有這樣，符紙才會顯示出正確的圖案。&lt;/p&gt;</tw-passagedata><tw-passagedata pid="50" name="ch2關卡2破關" tags="center nofooter black one" position="2150,2275" size="100,100">&lt;span class=&quot;slide-container&quot;&gt;
   &lt;img src=&quot;media/img/win.png&quot; width=&quot;90%&quot; class=&quot;scale-in-center&quot;&gt;
