--- a/demo/CarbonPricing.html
+++ b/demo/CarbonPricing.html
@@ -59,7 +59,7 @@
                 開始挑戰
             </button>
             
-            <p class="text-xs text-gray-400 mt-4">提示：此遊戲為單機 HTML 檔，可直接用瀏覽器開啟。</p>
+            <p class="text-xs text-gray-400 mt-4">辰河設計製作DEMO</p>
         </div>
     </div>
 
